# ratsija

./: .gitignore  README.md  main.py  setup.cfg
rules/: hy-fiwiki.txt  ru-sfs4900.txt
src/ratsija/: __init__.py  hy_fiwiki.py  ru_sfs4900.py
tests/: hy_fiwiki.py  ru_sfs4900.py
