[metadata]
name = ratsija
version = 0.0.1
author = Tuomas Siipola
author_email = tuomas@zpl.fi
description = Transliteration library
url = https://github.com/siiptuo/ratsija
project_urls =
    Bug Tracker = https://github.com/siiptuo/ratsija/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src